Fix: Dashboard stretched from new content.

--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
 }
 body {
     font-family: "Mulish", sans-serif;
+    background-color: var(--main-color);
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -33,6 +34,7 @@ nav {
     grid-template-columns: 1fr;
 
     min-width: 250px;
+    height: 100vh;
 }
 nav .icon-group {
     display: flex;
